--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -72,6 +72,13 @@ import com.android.build.OutputFile
  * ]
  */
 
+project.ext.envConfigFiles = [
+    debug: ".env.dev",
+    release: ".env.prod"
+]
+
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
 apply from: "../../node_modules/react-native/react.gradle"
 
 /**
@@ -111,10 +118,21 @@ android {
             include "armeabi-v7a", "x86"
         }
     }
+
+    signingConfigs {
+        release {
+            storeFile file('../../formation-key.keystore')
+            storePassword 'reactnative'
+            keyAlias 'formation'
+            keyPassword 'reactnative'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
@@ -154,6 +172,7 @@ repositories {
 }
 
 dependencies {
+    compile project(':react-native-config')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
