--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.javascript.file.suffixes=.js,.jsx
 sonar.test.exclusions=../**/*.spec.*
-sonar.exclusions=./node_modules/**,**/*.spec.*
+sonar.exclusions=./node_modules/**,**/*.spec.*,**/Info.*.js
 sonar.javascript.environments=jest,jasmine,node,browser
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.eslint.eslintpath=./node_modules/.bin/eslint
